--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": ">=20"
+  "engines": { 
+    "node": "20.x" 
   },
   "dependencies": {
     "better-sqlite3": "^9.4.0",
